# flaskWebsite

./: .gitignore  .replit  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
static/: output.css
templates/: index.html
